force-app/main/default/objects/Contact/fields/test_backpro_field__c.field-meta.xml
<CustomField>
    <fullName>test_backpro_field__c</fullName>
    <label>test backpro field</label>
    <length>10</length>
    <type>Text</type>
</CustomField>