force-app/main/default/objects/Contact/recordTypes/CRM_Work.recordType-meta.xml
<RecordType>
    <fullName>CRM_Work</fullName>
    <active>true</active>
    <label>CRM Work</label>
</RecordType>