force-app/main/default/objects/Contact/recordTypes/CRM_Work_SE.recordType-meta.xml
<RecordType>
    <fullName>CRM_Work_SE</fullName>
    <active>true</active>
    <label>CRM Work SE</label>
</RecordType>