force-app/main/default/objects/Contact/recordTypes/Technical_Contact.recordType-meta.xml
<RecordType>
    <fullName>Technical_Contact</fullName>
    <active>false</active>
    <label>Technical Contact</label>
</RecordType>