force-app/main/default/objects/Contact/recordTypes/X360_Connect_Contact.recordType-meta.xml
<RecordType>
    <fullName>X360_Connect_Contact</fullName>
    <active>true</active>
    <label>X360 Connect Contact</label>
</RecordType>